# pm

./: .dockerignore  AGENTS.md  Dockerfile  kanban.db
backend/: AGENTS.md  database.py  main.py  openrouter.py  pyproject.toml
backend/static/: hello.html
backend/tests/: test_main.py
docs/: DATABASE_SCHEMA.md  PLAN.md
frontend/: AGENTS.md  next.config.ts  playwright.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: KanbanBoard.tsx  LoginForm.test.tsx  LoginForm.tsx
frontend/tests/: kanban.spec.ts
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
