[project]
name = "pm-backend"
version = "0.1.0"
description = "Backend for project management MVP"
authors = [
    { name = "Auto Generated" }
]

dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
